# libIR

./: .gitignore  CMakeLists.txt  LibIR.cs  Makefile  README.md  make-linux.sh  make-windows.sh  make-with-nn.sh  make.sh
libirsharp/: LibIR.cs  libirsharp.csproj
libirsharp.examples/: Program.cs  WaveFile.cs  libirsharp.examples.csproj
src/: convolve.c  convolve.h  echo.c  echo.h  main.c  nn.cpp  nn.hpp  standard.h  util.c  util.h
src/fft/: fft.c  fft.h
